# slack-notifier

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: build.yml
notifier/: checker.py  github.py  main.py  slack.py  types.py  utils.py
