[tool.poetry]
name = "slack-notifier"
version = "0.1.0"
description = ""
authors = ["Sigurd Ljødal <sigurd.ljodal@kolonial.no>"]
license = "MIT"
packages = [
    { include = "notifier" },
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "0.22.0"
dacite = "^1.6.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "22.3.0"
isort = "^5.10.1"
mypy = "0.960"
flake8-bugbear = "^22.4.25"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
