[tool.poetry]
name = "slack-notifier"
version = "0.1.0"
description = ""
authors = ["Sigurd Ljødal <sigurd.ljodal@kolonial.no>"]
license = "MIT"
packages = [
    { include = "notifier" },
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "0.23.3"
dacite = "^1.8.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "23.1.0"
isort = "^5.12.0"
mypy = "1.0.1"
flake8-bugbear = "^23.3.12"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
